--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+		<meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
     <body>
         <div id="root"></div>
